samples/_failures_safe/1761169081_785131_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f877f881.c: In function ‘main’:
./samples/SAFE/__tmp_f877f881.c:160:39: error: expected ‘)’ at end of input
  160 |         process_event(&sm, EVENT_RESET
      |                      ~                ^
      |                                       )
./samples/SAFE/__tmp_f877f881.c:160:9: error: expected declaration or statement at end of input
  160 |         process_event(&sm, EVENT_RESET
      |         ^~~~~~~~~~~~~
./samples/SAFE/__tmp_f877f881.c:160:9: error: expected declaration or statement at end of input
